<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.purdue.rwillmo.MainActivity" >

    <!-- TODO your layout here -->

    <Button
        android:id="@+id/bu_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:enabled="true"
        android:gravity="center"
        android:minHeight="60dp"
        android:minWidth="100dp"
        android:onClick="onSubmit"
        android:padding="@dimen/padding"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_name"
        android:layout_alignBottom="@+id/et_name"
        android:layout_toRightOf="@+id/et_name"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:textSize="26sp" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/et_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="64dp"
        android:padding="@dimen/padding"
        android:text="@string/name"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RadioGroup
        
        android:id="@+id/radioGroup1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_below="@+id/et_preferences"
        android:textSize="30sp">

    

    <RadioButton
        android:id="@+id/radio_requester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radio_volunteer"
        android:layout_alignLeft="@+id/radio_volunteer"
        
        android:text="@string/requester"
        android:textSize="26sp" />
    <RadioButton
        android:id="@+id/radio_volunteer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tv_name"
        android:layout_centerVertical="true"
        android:layout_below="@+id/radio_requester"
        
        android:text="@string/Volunteer"
        android:textSize="26sp" />
    <RadioButton
        android:id="@+id/radio_neutral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_volunteer"
        android:layout_alignLeft="@+id/radio_requester"
        
        android:text="@string/neutral" 
        android:textSize="26sp"/>
</RadioGroup>

      <TextView
        android:id="@+id/et_preferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_name"
      
        android:layout_marginLeft="19dp"
        android:layout_marginTop="30dp"
        android:padding="@dimen/padding"
        android:text="@string/preferences"
        android:textSize="30sp"
        android:textStyle="bold" />
      
      <TextView
        android:id="@+id/et_from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup1"
        
        android:layout_marginLeft="19dp"
        android:layout_marginTop="30dp"
        android:padding="@dimen/padding"
        android:text="@string/from"
        android:textSize="30sp"
        android:textStyle="bold" />
      
      <TextView
        android:id="@+id/et_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from_spinner"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="30dp"
        android:padding="@dimen/padding"
        android:text="@string/to"
        android:textSize="30sp"
        android:textStyle="bold" />

     <Spinner
         android:id="@+id/to_spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/et_to"
         android:layout_below="@+id/et_to"
         android:layout_marginBottom="10dp" />

     <Spinner
         android:id="@+id/from_spinner"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/et_from"
         android:layout_below="@+id/et_from" />
      
</RelativeLayout>